<resources>
    <string name="app_name">LoggerApp</string>
    <string name="password">Password</string>
    <string name="open">Open</string>
    <string name="wrong_password">Wrong Password!</string>
    <string name="settings">Settings</string>
    <string name="app_icon">App Icon</string>
    <string name="sttng_enable_password">Password Protection</string>
    <string name="sttng_enable_password_summary">You have to input a password, to access the App</string>
    <string name="sttng_password">Set Password</string>
    <string name="sttng_password_summary">The password to ask for at the login</string>
    <string name="sttng_password_default">0000</string>
    <string name="play">Play</string>
    <string name="number">number</string>
    <string name="date">date</string>
    <string name="permission_denied">Permission Denied. Exiting&#8230;</string>
    <string name="sttng_log_calls">Log Calls</string>
    <string name="sttng_log_calls_summary">Log and Record Calls</string>

</resources>
