<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">
        <SwitchPreference
            android:key="pref_enable_password"
            android:title="@string/sttng_enable_password"
            android:summary="@string/sttng_enable_password_summary"
            android:defaultValue="false" />
        <EditTextPreference
            android:key="pref_password"
            android:title="@string/sttng_password"
            android:summary="@string/sttng_password_summary"
            android:inputType="number"
            android:defaultValue="@string/sttng_password_default" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Calls">
        <SwitchPreference
            android:key="pref_log_calls"
            android:title="@string/sttng_log_calls"
            android:summary="@string/sttng_log_calls_summary"
            android:defaultValue="true" />
        <ListPreference
            android:key="pref_audiosource"
            android:title="Audio Source"
            android:entries="@array/AudioSource"
            android:entryValues="@array/AudioSourceData"
            android:defaultValue="VOICE_COMMUNICATION"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="App Usage">
        <PreferenceScreen
            android:key="pref_system_usagesetting"
            android:title="System Usage Settings"
            android:summary="Enable the setting for LoggerApp">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="com.android.settings.Settings$UsageAccessSettingsActivity"
                android:targetPackage="com.android.settings"
                android:targetClass="com.android.settings.Settings$UsageAccessSettingsActivity" />
            />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>