<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.hsrw.mobilecomputing.loggerapp.activities.RecordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tv_number"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_date"
        android:layout_below="@+id/tv_number"
        android:layout_centerHorizontal="true"
        android:text="@string/date" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/btn_play"
        android:layout_below="@+id/tv_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        android:onClick="onClickPlay" />

</RelativeLayout>
